--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
     "bootstrap": "4.5",
+    "chart.js": "^4.3.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^2.30.0",
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
